app/assets/stylesheets/responsive/alaveteli_pro/_batch_request_authority_search_layout.scss
.batch-builder-mode {
    margin-bottom: 1em;

    .tabs {
        @include grid-row();
        padding-left: 0;
    }

    .tab-title {
        margin-left: 1em;
    }
}

.batch-builder {
    @include grid-row();

    @media #{$large-up} {
        @include flexbox();
        @include flex-wrap(wrap);
    }
}

.batch-builder__search-form,
.batch-builder__search-results,
.batch-builder__chosen-authorities,
.batch-builder__actions {
    padding: ($column-gutter / 2); // Same padding as grid-columns

    @media #{$large-up} {
        width: 50%;
    }
}

@media #{$large-up} {
    .batch-builder--search {
        .batch-builder__search-form {
            @include flex-order(1);
        }

        .batch-builder__actions {
            @include flex-order(2);
        }

        .batch-builder__search-results {
            @include flex-order(3);
        }

        .batch-builder__chosen-authorities {
            @include flex-order(4);
        }
    }

    .batch-builder--browse {
        .batch-builder__search-form {
            display: none;
        }

        .batch-builder__actions {
            width: 100%;
        }
    }
}

.batch-builder__search-form {
    form {
        margin-bottom: 0;
    }

    input[type="text"] { // need to be at least as specific as `form input[type="text"]`
        width: 100%;
        margin-bottom: 0;
    }
}

.batch-builder__actions {
    @include flexbox();
    @include justify-content(flex-end);
    @include flex-align(flex-end);

    form {
        margin-bottom: 0;
    }
}

.batch-builder__list {
    list-style: none;
    padding: 0;
    margin: 0;

    height: 30em;
    overflow: auto;
}

.batch-builder__list__item {
    padding: 1em;
    @include flexbox();
    @include flex-align('flex-start');
}

.batch-builder__list__item__details {
    @include flex(1 0 0%);
}

.batch-builder__list__item__anchor {
    @include flex(1 0 0%);
}

.batch-builder__list__item__name {
    @include flex(1 0 0%);
}

.batch-builder__list__item__name {
}

.batch-builder__list__item__notes {
}

.batch-builder__list__item__action {
    @include flex(0 0 auto);
    margin-bottom: 0;

    form {
        margin-bottom: 0;
    }

    input[type="submit"] { // need to be more specific than `form input[type="submit"]`
        margin: -0.5em 0;
        font-size: 0.8em;
    }
}

.batch-builder__list__page-info {
    text-align: center;
}

.batch-builder__list__group {
    ul {
        padding-left: 0; // reset default list padding

        .batch-builder__list__item {
            padding-left: 2em; // group children are indented
        }

        ul .batch-builder__list__item {
            padding-left: 4em; // grandchildren are indented even more
        }
    }

    &.batch-builder__list__group--closed ul {
        display: none;
    }
}

